@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 31-Aug-2010 Jean-Marie Simonet
  # [#22150] hathor menu type - unable to select type. Thanks Bill.
+ # [#22161] edit article - show icons and + param missing 
 
 30-Aug-2010 Jean-Marie Simonet
  # [#22050] useful joomla links menu. Thanks Bill.
